--- a/index.html
+++ b/index.html
@@ -875,14 +875,14 @@
     <section class="slider44">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="images/slider/zam3.jpg"></div>
-                <div class="swiper-slide"><img src="images/slider/zam1.jpg"></div>
-                <div class="swiper-slide"><img src="images/slider/zam2.jpg"></div>
-                <div class="swiper-slide"><img src="images/slider/zam3.jpg"></div>
-                <div class="swiper-slide"><img src="images/slider/zam2.jpg"></div>
-                <div class="swiper-slide"><img src="images/slider/zam1.jpg"></div>
-                <div class="swiper-slide"><img src="images/slider/zam2.jpg"></div>
-                <div class="swiper-slide"><img src="images/slider/zam3.jpg"></div>
+                <div class="swiper-slide"><img src="images/slider/am3.jpg"></div>
+                <div class="swiper-slide"><img src="images/slider/am1.jpg"></div>
+                <div class="swiper-slide"><img src="images/slider/am2.jpg"></div>
+                <div class="swiper-slide"><img src="images/slider/am3.jpg"></div>
+                <div class="swiper-slide"><img src="images/slider/am2.jpg"></div>
+                <div class="swiper-slide"><img src="images/slider/am1.jpg"></div>
+                <div class="swiper-slide"><img src="images/slider/am2.jpg"></div>
+                <div class="swiper-slide"><img src="images/slider/am3.jpg"></div>
 
 
 
