--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
         <div class="content">
 
             <h3>GUNBOUND</h3>
-            <p>Items ilimitados
-            Cornetas free</p>
+            <p>BOOMER
+            TIROS PERFECTOS</p>
             
 
         </div>
