--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <div class="content">
 
-            <h3>GUNBOUND</h3>
+            <h3>DRGONDOUND</h3>
             <p>BOOMER
             TIROS PERFECTOS</p>
             
